cli/tests/snapshot/inputs/errors/mismatched_row_record_pattern_fail.ncl
# capture = 'stderr'
# command = ['eval']
(
  let { x : { a : Number } = { a : String } } = { x = { a = true } } 
  in a
) : _
